<resources>
    <string name="app_name">BetterOpenDrive</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="icon">File Icon</string>
    <string name="menu">Menu for List Item</string>
    <string name="avatar">Profile Avatar</string>
    <string name="loading">Loading...</string>
    <string name="unsupported_file_type_text">No Preview Available For Selected File Type</string>
    <string name="invalid_operation">Invalid Operation</string>
    <string name="place_holder">Place Holder</string>
    <string name="property_name">Name:</string>
    <string name="property_size">Size:</string>
    <string name="property_sub_folders">Sub Folders:</string>
    <string name="property_modified_date">Last Modified:</string>
    <string name="property_creation_date">Date Created:</string>
    <string name="property_download_link">Download Link:</string>
    <string name="property_version">Version:</string>
    <string name="send_to">Send To</string>
    <string name="create_folder">New Folder</string>
    <string name="create_folder_hint">Enter Folder Name</string>
</resources>
